--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,32 @@ code {
     monospace;
 }
 
-body {
-  /* backdrop-filter: blur(10px); */
+*,:before,:after {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: #e5e7eb;
+}
+
+button,[type=button],[type=reset],[type=submit] {
+  -webkit-appearance: button;
+  appearance: button;
+  background-color: transparent;
+  background-image: none;
+}
+
+button,input,optgroup,select,textarea {
+  font-family: inherit;
+  font-feature-settings: inherit;
+  font-variation-settings: inherit;
+  font-size: 100%;
+  font-weight: inherit;
+  line-height: inherit;
+  color: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+button,select {
+  text-transform: none;
 }
